--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,7 @@ h4 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .bg-image {
